--- a/niac/Views/Home/Details.cshtml
+++ b/niac/Views/Home/Details.cshtml
@@ -56,8 +56,8 @@
 
 
         <h2>Questions</h2>
-
-        <table class="table table-bordered table-condensed">
+        <span class="sr-only" id="tableDescription">Table of mla questions</span>
+        <table class="table table-bordered table-condensed" aria-describedby="tableDescription">
             <thead>
                 <tr>
                     <th>
