--- a/niac/Views/Home/Details.cshtml
+++ b/niac/Views/Home/Details.cshtml
@@ -60,7 +60,7 @@
         <table class="table table-bordered table-condensed" aria-describedby="tableDescription">
             <thead>
                 <tr>
-                    <th>
+                    <th scope="col">
 
 
                     </th>
