--- a/niac/Views/Shared/_Layout.cshtml
+++ b/niac/Views/Shared/_Layout.cshtml
@@ -36,7 +36,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - niac - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - Developed by <a href="https://github.com/mikeatronic">@@mikeatronic</a> - The data is kindly provided using Open data from the NI Assembly and 
+            <a href="http://data.niassembly.gov.uk/licence.aspx">contains Parliamentary information licensed under the Open Government Licence v3.0</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -52,8 +53,6 @@
 
         $(document).ready(function () {
             $('#memberTable').DataTable();
-
-
         });
 
         $(function () {
