--- a/niac/Views/Home/Details.cshtml
+++ b/niac/Views/Home/Details.cshtml
@@ -59,7 +59,7 @@
 
         <p>Total Questions Asked: @Model.TotalQuestionsAsked</p>
 
-        <table class="table table-bordered table-condensed" aria-describedby="tableDescription">
+        <table class="table table-bordered table-condensed" aria-describedby="tableDescription" id="questionTable">
             <thead>
                 <tr>
                     <th scope="col">Department</th>
