--- a/niac/Views/Shared/_Layout.cshtml
+++ b/niac/Views/Shared/_Layout.cshtml
@@ -53,6 +53,7 @@
 
         $(document).ready(function () {
             $('#memberTable').DataTable();
+            $('#questionTable').DataTable();
         });
 
         $(function () {
