--- a/niac/Views/Home/Index.cshtml
+++ b/niac/Views/Home/Index.cshtml
@@ -6,7 +6,8 @@
 <h1>Current MLAs</h1>
 
 <span class="sr-only" id="tableDescription">Table of current mlas</span>
-<table class="table table-bordered table-hover table-striped table-condensed" id="memberTable" aria-describedby="">
+<table class="table table-bordered table-hover table-striped table-condensed" id="memberTable">
+    <caption class="sr-only">Table displaying all the current MLA'S</caption>
     <thead>
         <tr>
             <th scope="col"><span class="sr-only">Mla Picture</span></th>
